--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <body>
         <h1>Hello World</h1>
         <img src="https://d17fnq9dkz9hgj.cloudfront.net/breed-uploads/2018/08/Maine-Coon_01.jpg?bust=1538148971&width=1336">
+        <audio controls>
+            
+            <source src="bensound-buddy.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+        <video width="320" height="240" controls>
+            <source src="1.mp4" type="video/mp4">
+            
+          Your browser does not support the video tag.
+          </video> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pCa4LvjpBSE?start=180" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
