--- a/someCss.html
+++ b/someCss.html
@@ -29,8 +29,8 @@
     <body>
        <h1>Newbie1</h1>
        
-       <p style = "font-size: 100%;">I was born and raised in China.</p>
-       <p style = "font-size: 200%;"> At 18 I left home to study in the U.S.</p>
+       <p style = "font-family: verdana;">I was born and raised in China.</p>
+       <p style = "font-family: courier;"> At 18 I left home to study in the U.S.</p>
 
 
 
