--- a/myFunSite.html
+++ b/myFunSite.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="index.html" class="logo"><strong>Traveler</strong></a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
+						<a href="myFunSite.html">Home</a>
 						<a href="generic.html">Generic</a>
 						<a href="elements.html">Elements</a>
 					</nav>
