--- a/generic.html
+++ b/generic.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong>Traveler</strong></a>
+					<a href="myFunSite.html" class="logo"><strong>Traveler</strong></a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
+						<a href="myFunSite.html">Home</a>
 						<a href="generic.html">Generic</a>
 						<a href="elements.html">Elements</a>
 					</nav>
