--- a/myFunSite.html
+++ b/myFunSite.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong>Traveler</strong></a>
+					<a href="myFunSite.html" class="logo"><strong>Traveler</strong></a>
 					<nav id="nav">
 						<a href="myFunSite.html">Home</a>
 						<a href="generic.html">Generic</a>
